Fix issue with image overlap and add interactivity to button 1

--- a/styles.css
+++ b/styles.css
@@ -30,24 +30,25 @@ header h1 {
     font-size: 60px;
     margin-top: 40px;
     margin-bottom: 20px;
-    text-shadow: 2px 2px 0 black;
+    text-shadow: 2px 2px 4px black;
 }
 
 header h3 {
     font-style: italic;
     text-shadow: 2px 2px 4px black;
-    font-size: 30px;
+    font-size: 35px;
 }
 
 .grid {
-    padding: 20px;
+    padding: 40px;
     max-width: 1000px;
 }
 
 .cards {
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .card-item {
@@ -69,8 +70,8 @@ header h3 {
 }
 
 .card-item img {
-    max-width: 300px;
-    /* height: auto; */
+    width: 300px;
+    height: 200px;
     border-radius: 8px;
 }
 
@@ -103,14 +104,14 @@ header h3 {
 }
 
 .footer {
-    background-color: #5c2f86;
+    background-color:#f0f0f0;
     padding: 50px;
 }
 
 .footer p {
     text-align: center;
-    color: #fff;
-    font-weight: 600;
+    color: #8d51c5;
+    font-weight: 700;
     letter-spacing: 1px;
 }
 
